# 2nd-brain

./: .env.example  bot.py  config.py  conftest.py  models.py  pyproject.toml
pipeline/: analyze.py
tests/: conftest.py  test_analyze.py  test_bot.py  test_index.py  test_writer.py
vault/: index.py  writer.py
