[project]
name = "2nd-brain"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "discord.py==2.3.2",
    "anthropic>=0.25.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "python-frontmatter>=1.1.0",
    # discord.py imports the stdlib `audioop`, removed in Python 3.13 (PEP 594).
    # The backport restores it so the bot can import/run on 3.13+.
    "audioop-lts; python_version >= '3.13'",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
